# sporch

./: Cargo.toml  README.md  corpus.txt  corpus_bu.txt  todo.md
src/: analysis.rs  main.rs  search.rs
