[package]
name = "sporch"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3"] }
realfft = "3.4.0"
rubato = "0.16.1"
rand = "0.9.0"
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  
clap = { version = "4.4.0", features = ["derive"] }